objects/ssot__IndicatorPerformancePeriod__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__BaselineValueNumber__c</fullName>
        <label>Baseline Value</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Indicator Performance Period Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IndicatorAssignmentId__c</fullName>
        <label>Indicator Assignment</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastMeasurementDate__c</fullName>
        <label>Last Measurement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__LastResultValueNumber__c</fullName>
        <label>Last Result Value</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TargetProgress__c</fullName>
        <label>Target Progress</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TargetValueNumber__c</fullName>
        <label>Target Value</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TimePeriodId__c</fullName>
        <label>Time Period</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726577119_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IndicatorPerformancePeriod_TimePerio_rel</label>
        <referenceTo>ssot__TimePeriod__dlm</referenceTo>
        <relationshipLabel>IndicatorPerformancePeriod_TimePerio_rel</relationshipLabel>
        <relationshipName>rel_1716726577119_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726579877_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IndicatorPerformancePeriod_Indicator_rel</label>
        <referenceTo>ssot__IndicatorAssignment__dlm</referenceTo>
        <relationshipLabel>IndicatorPerformancePeriod_Indicator_rel</relationshipLabel>
        <relationshipName>rel_1716726579877_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>